added colour pallet and reset CSS properties

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="dark">
 	<head>
 		<meta charset="UTF-8" />
 		<meta
@@ -62,8 +62,17 @@
       rel="stylesheet" 
       href="/src/css/style.css" 
     />
+
+    <!-- 
+      - Custom JS Link
+     -->
+    <script src="/src/ts/global.ts" defer></script>
+    <script src="/src/ts/home.ts" defer></script>
+
 	</head>
 	<body>
     <h1>Recipes.io - Cooking made easy</h1>
+    <img src="./public/images/logo-dark.svg" alt="">
+    <img src="./public/images/logo-light.svg" alt="">
   </body>
 </html>
