--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-theme="dark">
+<html lang="en" data-theme="light">
 	<head>
 		<meta charset="UTF-8" />
 		<meta
@@ -71,8 +71,8 @@
 
 	</head>
 	<body>
-    <h1>Recipes.io - Cooking made easy</h1>
-    <img src="./public/images/logo-dark.svg" alt="">
-    <img src="./public/images/logo-light.svg" alt="">
+  
+
+
   </body>
 </html>
