finished footer section

--- a/index.html
+++ b/index.html
@@ -192,6 +192,9 @@
       </ul>
     </nav>
 
+    <!-- 
+      -# MAIN
+     -->
     <main>
       <article>
 
@@ -940,5 +943,39 @@
       </article>
     </main>  
 
+
+    <!-- 
+      - #FOOTER
+     -->
+
+    <footer class="footer">
+
+      <p class="copyright body-medium">Copyright 2023 bassu</p>
+
+      <a href="/" class="logo">
+        <img 
+          src="./public/images/logo-light.svg" 
+          alt="logo-light" 
+          width="200" 
+          height="32" 
+          class="logo-light"
+        >
+     
+        <img 
+          src="./public/images/logo-dark.svg" 
+          alt="logo-dark" 
+          width="200" 
+          height="32" 
+          class="logo-dark"
+        >
+      </a>
+
+
+      <a href="https://www.edamam.com/" target="_blank" class="edamam">
+        <img src="./public/images/edamam.svg" width="200" height="200" loading="lazy" alt="edamam free reipe api">
+      </a>
+    </footer>
+
+    
   </body>
 </html>
