finished Recipe detail page

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
       <ul class="nav-list">
 
         <li class="nav-item">
-          <a href="./recipes.html" class="nav-link" aria-current="false">
+          <a href="./src/pages/recipes.html" class="nav-link" aria-current="false">
 
             <span class="item-icon">
               <span class="material-symbols-outlined" aria-hidden="true">
@@ -185,7 +185,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="./saved-recipes.html" class="nav-link" aria-current="false">
+          <a href="./src/pages/saved-recipes.html" class="nav-link" aria-current="false">
             <span class="item-icon">
               <span class="material-symbols-outlined" aria-hidden="true">
                 book
@@ -421,7 +421,7 @@
           aria-labelledby="slider-label-1"
           data-slider-section 
         ></section>
-        
+
         <!-- 
           - #Tags
          -->
