Created Recipes page add style also

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       -->
     <link 
       rel="shortcut icon" 
-      href="./public/favicon.svg" 
+      href="/favicon.svg" 
       type="image/svg+xml" 
     />
 
@@ -96,7 +96,7 @@
 
       <a href="/" class="logo">
         <img 
-          src="./public/images/logo-light.svg" 
+          src="/images/logo-light.svg" 
           alt="logo-light" 
           width="200" 
           height="32" 
@@ -104,7 +104,7 @@
         >
      
         <img 
-          src="./public/images/logo-dark.svg" 
+          src="/images/logo-dark.svg" 
           alt="logo-dark" 
           width="200" 
           height="32" 
