Recipe page rendered data from API

--- a/src/pages/recipes.html
+++ b/src/pages/recipes.html
@@ -1657,9 +1657,7 @@
 
           <div class="grid-list" data-grid-list></div>
 
-          <div class="load-more grid-list" data-load-more>
-            <p class="body-medium info-text">Recipes await, unleash your culinary magic!</p>
-          </div>
+          <div class="load-more grid-list" data-load-more></div>
 
         </div>
       </article>
