--- a/src/pages/detail.html
+++ b/src/pages/detail.html
@@ -29,7 +29,7 @@
       -->
     <link 
       rel="shortcut icon" 
-      href="./public/favicon.svg" 
+      href="/favicon.svg" 
       type="image/svg+xml" 
     />
 
@@ -96,7 +96,7 @@
 
       <a href="/" class="logo">
         <img 
-          src="../../public/images/logo-light.svg" 
+          src="/images/logo-light.svg" 
           alt="logo-light" 
           width="200" 
           height="32" 
@@ -104,7 +104,7 @@
         >
      
         <img 
-          src="../../public/images/logo-dark.svg" 
+          src="/images/logo-dark.svg" 
           alt="logo-dark" 
           width="200" 
           height="32" 
@@ -206,133 +206,52 @@
     <main class="detail-page-main">
       <article class="article detail-page container" data-detail-container>
 
-        <figure class="img-holder detail-banner">
-          <img 
-            src="./public/images/detail-banner.jpg" 
-            width="300"
-            height="300"
-            alt="Restaurant-style Pan Seared Salmon"
-            class="img-cover"
-          />
-        </figure>
 
-        <div class="detail-content">
+        <div class="detail-banner detail-banner-skeleton skeleton"></div>
+
+        <div class="detail-content detail-content-skeleton">
 
           <div class="title-wrapper">
-            <h1 class="display-small">Restaurant-style Pan Seared Salmon</h1>
-
-            <button class="btn btn-secondary has-state has-icon removed">
-
-              <span class="material-symbols-outlined bookmark-add" aria-hidden="true">bookmark_add</span>
-              <span class="material-symbols-outlined bookmark" aria-hidden="true">bookmark</span>
-
-              <span class="label-large save-text">Save</span>
-              <span class="label-large unsaved-text">Unsaved</span>
-
-            </button>
+            <div class="title-skeleton skeleton"></div>
           </div>
 
-          <div class="detail-author label-large">
-            <span class="span">by</span> Bassu
-          </div>
+          <div class="detail-author text-skeleton skeleton"></div>
 
           <div class="detail-stats">
 
             <div class="stats-item">
-              <span class="display-medium">4</span>
-
-              <span class="label-medium">Ingredients</span>
+              <span class="skeleton title-skeleton"></span>
+              <span class="skeleton text-skeleton"></span>
             </div>
 
             <div class="stats-item">
-              <span class="display-medium">15</span>
-
-              <span class="label-medium">Minutes</span>
+              <span class="skeleton title-skeleton"></span>
+              <span class="skeleton text-skeleton"></span>
             </div>
 
             <div class="stats-item">
-              <span class="display-medium">384</span>
-
-              <span class="label-medium">Calories</span>
+              <span class="skeleton title-skeleton"></span>
+              <span class="skeleton text-skeleton"></span>
             </div>
+
           </div>
 
           <div class="tag-list">
-
-            <a href="./recipes.html" class="filter-chip label-large has-state">Fish & Seafood</a>
-
-            <a href="./recipes.html" class="filter-chip label-large has-state">American</a>
-
-            <a href="./recipes.html" class="filter-chip label-large has-state">Dinner</a>
-
-            <a href="./recipes.html" class="filter-chip label-large has-state">Salmon</a>
+            <div class="filter-chip skeleton filter-chip-skeleton"></div>
+            <div class="filter-chip skeleton filter-chip-skeleton"></div>
+            <div class="filter-chip skeleton filter-chip-skeleton"></div>
           </div>
 
-          <h2 class="title-medium ingr-title">Ingredients
-            <span class="label-medium">for 6 Servings</span>
-          </h2>
+          <div class="ingr-title skeleton title-skeleton"></div>
 
-          <ul class="body-large ingr-list">
-
-            <li class="ingr-item">
-              2 1/2 pounds skirt steak or sirloin flap steak
-            </li>
-
-            <li class="ingr-item">
-              Accompaniments: homemade burger buns ; homemade ketchup ; homemade mustard ; homemade pickle relish ; lettuce and tomato
-            </li>
-          </ul>
-        </div>
-
-        <div class="detail-banner detail-banner-skeleton skeleton">
-
-          <div class="detail-content detail-content-skeleton">
-
-            <div class="title-wrapper">
-              <div class="title-skeleton skeleton"></div>
-            </div>
-
-            <div class="detail-author text-skeleton skeleton"></div>
-
-            <div class="detail-stats">
-
-              <div class="stats-item">
-                <span class="skeleton title-skeleton"></span>
-                <span class="skeleton text-skeleton"></span>
-              </div>
-
-              <div class="stats-item">
-                <span class="skeleton title-skeleton"></span>
-                <span class="skeleton text-skeleton"></span>
-              </div>
-
-              <div class="stats-item">
-                <span class="skeleton title-skeleton"></span>
-                <span class="skeleton text-skeleton"></span>
-              </div>
-
-              <div class="stats-item">
-                <span class="skeleton title-skeleton"></span>
-                <span class="skeleton text-skeleton"></span>
-              </div>
-            </div>
-
-            <div class="tag-list">
-              <div class="filter-chip skeleton filter-chip-skeleton"></div>
-              <div class="filter-chip skeleton filter-chip-skeleton"></div>
-              <div class="filter-chip skeleton filter-chip-skeleton"></div>
-            </div>
-
-            <div class="ingr-title skeleton title-skeleton"></div>
-
-            <div class="ingr-list">
-              <div class="ingr-item skeleton text-skeleton"></div>
-              <div class="ingr-item skeleton text-skeleton"></div>
-              <div class="ingr-item skeleton text-skeleton"></div>
-              <div class="ingr-item skeleton text-skeleton"></div>
-            </div>
+          <div class="ingr-list">
+            <div class="ingr-item skeleton text-skeleton"></div>
+            <div class="ingr-item skeleton text-skeleton"></div>
+            <div class="ingr-item skeleton text-skeleton"></div>
+            <div class="ingr-item skeleton text-skeleton"></div>
           </div>
         </div>
+        
 
       </article>
     </main>  
