Rendered Saved Recipes page from local storage

--- a/index.html
+++ b/index.html
@@ -524,7 +524,9 @@
 
     <footer class="footer">
 
-      <p class="copyright body-medium">Copyright 2023 bassu</p>
+      <p class="copyright body-medium">Copyright 
+        <script>document.write(/\d{4}/.exec(Date())[0])</script>  
+      bassu</p>
 
       <a href="/" class="logo">
         <img 
