--- a/src/pages/recipes.html
+++ b/src/pages/recipes.html
@@ -185,7 +185,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="./src/pages/saved-recipes.html" class="nav-link" aria-current="false">
+          <a href="./saved-recipes.html" class="nav-link" aria-current="false">
             <span class="item-icon">
               <span class="material-symbols-outlined" aria-hidden="true">
                 book
@@ -1670,7 +1670,9 @@
 
     <footer class="footer">
 
-      <p class="copyright body-medium">Copyright 2023 bassu</p>
+      <p class="copyright body-medium">Copyright 
+        <script>document.write(/\d{4}/.exec(Date())[0])</script>  
+      bassu</p>
 
       <a href="/" class="logo">
         <img 
