--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
 
           <li>
-            <a href="./recipes.html" class="navbar-link title-small has-state">Recipes</a>
+            <a href="/src/pages/recipes.html" class="navbar-link title-small has-state">Recipes</a>
           </li>
 
 
@@ -140,7 +140,7 @@
       <span class="material-symbols-outlined dark-icon" aria-hidden="true">dark_mode</span>
       </button>
 
-      <a href="./saved-recipes.html" class="btn btn-primary has-state">
+      <a href="/src/pages/saved-recipes.html" class="btn btn-primary has-state">
         <span class="material-symbols-outlined" aria-hidden="true">book</span>
 
         <span class="span">Saved Recipes</span>
@@ -170,7 +170,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="#" class="nav-link" aria-current="true">
+          <a href="#" class="nav-link active" aria-current="true">
 
             <span class="item-icon">
               <span class="material-symbols-outlined" aria-hidden="true">
@@ -256,7 +256,7 @@
         -->
 
         <section class="section tab">
-          <class="container">
+          <div class="container">
 
             <div 
               class="tab-list" 
@@ -438,77 +438,77 @@
 
           <div class="tag-list">
 
-            <a href="./recipes.html?health=wheat-free" class="badge-btn body-medium has-state ">wheat-free</a>
+            <a href="/src/pages/recipes.html?health=wheat-free" class="badge-btn body-medium has-state ">wheat-free</a>
 
-            <a href="./recipes.html?health=vegetarian" class="badge-btn body-medium has-state">Vegetarian</a>
+            <a href="/src/pages/recipes.html?health=vegetarian" class="badge-btn body-medium has-state">Vegetarian</a>
 
-            <a href="./recipes.html?health=vegan" class="badge-btn body-medium has-state">Vegan</a>
+            <a href="/src/pages/recipes.html?health=vegan" class="badge-btn body-medium has-state">Vegan</a>
 
-            <a href="./recipes.html?health=tree-nut-free" class="badge-btn body-medium has-state">Tree-Nut-Free</a>
+            <a href="/src/pages/recipes.html?health=tree-nut-free" class="badge-btn body-medium has-state">Tree-Nut-Free</a>
 
-            <a href="./recipes.html?health=sulfite-free" class="badge-btn body-medium has-state">Sulfite-Free</a>
+            <a href="/src/pages/recipes.html?health=sulfite-free" class="badge-btn body-medium has-state">Sulfite-Free</a>
 
-            <a href="./recipes.html?health=sugar-conscious" class="badge-btn body-medium has-state">sugar-conscious</a>
+            <a href="/src/pages/recipes.html?health=sugar-conscious" class="badge-btn body-medium has-state">sugar-conscious</a>
 
-            <a href="./recipes.html?health=soy-free" class="badge-btn body-medium has-state">Soy-Free</a>
+            <a href="/src/pages/recipes.html?health=soy-free" class="badge-btn body-medium has-state">Soy-Free</a>
 
-            <a href="./recipes.html?health=shellfish-free" class="badge-btn body-medium has-state">Shellfish-Free</a>
+            <a href="/src/pages/recipes.html?health=shellfish-free" class="badge-btn body-medium has-state">Shellfish-Free</a>
 
-            <a href="./recipes.html?health=sesame-free" class="badge-btn body-medium has-state">Sesame-Free</a>
+            <a href="/src/pages/recipes.html?health=sesame-free" class="badge-btn body-medium has-state">Sesame-Free</a>
 
-            <a href="./recipes.html?health=red-meat-free" class="badge-btn body-medium has-state">Red-Meat-Free</a>
+            <a href="/src/pages/recipes.html?health=red-meat-free" class="badge-btn body-medium has-state">Red-Meat-Free</a>
 
-            <a href="./recipes.html?health=pork-free" class="badge-btn body-medium has-state">Pork-Free</a>
+            <a href="/src/pages/recipes.html?health=pork-free" class="badge-btn body-medium has-state">Pork-Free</a>
 
-            <a href="./recipes.html?health=pecatarian" class="badge-btn body-medium has-state">Pecatarian</a>
+            <a href="/src/pages/recipes.html?health=pecatarian" class="badge-btn body-medium has-state">Pecatarian</a>
 
-            <a href="./recipes.html?health=peanut-free" class="badge-btn body-medium has-state">peanut-free</a>
+            <a href="/src/pages/recipes.html?health=peanut-free" class="badge-btn body-medium has-state">peanut-free</a>
 
-            <a href="./recipes.html?health=paleo" class="badge-btn body-medium has-state">Paleo</a>
+            <a href="/src/pages/recipes.html?health=paleo" class="badge-btn body-medium has-state">Paleo</a>
 
-            <a href="./recipes.html?health=No-oil-added" class="badge-btn body-medium has-state">No-Oil-Added</a>
+            <a href="/src/pages/recipes.html?health=No-oil-added" class="badge-btn body-medium has-state">No-Oil-Added</a>
 
-            <a href="./recipes.html?health=mustard-free" class="badge-btn body-medium has-state">Mustard-Free</a>
+            <a href="/src/pages/recipes.html?health=mustard-free" class="badge-btn body-medium has-state">Mustard-Free</a>
 
-            <a href="./recipes.html?health=mollusk-free" class="badge-btn body-medium has-state">Mollusk-Free</a>
+            <a href="/src/pages/recipes.html?health=mollusk-free" class="badge-btn body-medium has-state">Mollusk-Free</a>
 
-            <a href="./recipes.html?health=Mediterranean" class="badge-btn body-medium has-state">Mediterranean</a>
+            <a href="/src/pages/recipes.html?health=Mediterranean" class="badge-btn body-medium has-state">Mediterranean</a>
 
-            <a href="./recipes.html?health=lupine-free" class="badge-btn body-medium has-state">Lupine-Free</a>
+            <a href="/src/pages/recipes.html?health=lupine-free" class="badge-btn body-medium has-state">Lupine-Free</a>
 
-            <a href="./recipes.html?health=low-sugar" class="badge-btn body-medium has-state">Low-Sugar</a>
+            <a href="/src/pages/recipes.html?health=low-sugar" class="badge-btn body-medium has-state">Low-Sugar</a>
 
-            <a href="./recipes.html?health=low-potassium" class="badge-btn body-medium has-state">Low-Potassium</a>
+            <a href="/src/pages/recipes.html?health=low-potassium" class="badge-btn body-medium has-state">Low-Potassium</a>
 
-            <a href="./recipes.html?health=kosher" class="badge-btn body-medium has-state">Kosher</a>
+            <a href="/src/pages/recipes.html?health=kosher" class="badge-btn body-medium has-state">Kosher</a>
 
-            <a href="./recipes.html?health=kidney-friendly" class="badge-btn body-medium has-state">Kidney-Friendly</a>
+            <a href="/src/pages/recipes.html?health=kidney-friendly" class="badge-btn body-medium has-state">Kidney-Friendly</a>
 
-            <a href="./recipes.html?health=keto-friendly" class="badge-btn body-medium has-state">keto-friendly</a>
+            <a href="/src/pages/recipes.html?health=keto-friendly" class="badge-btn body-medium has-state">keto-friendly</a>
 
-            <a href="./recipes.html?health=immuno-supportive" class="badge-btn body-medium has-state">Immuno-Supportive</a>
+            <a href="/src/pages/recipes.html?health=immuno-supportive" class="badge-btn body-medium has-state">Immuno-Supportive</a>
 
-            <a href="./recipes.html?health=gluten-free" class="badge-btn body-medium has-state">Gluten-Free</a>
+            <a href="/src/pages/recipes.html?health=gluten-free" class="badge-btn body-medium has-state">Gluten-Free</a>
 
-            <a href="./recipes.html?health=fodmap-free" class="badge-btn body-medium has-state">FODMAP-Free</a>
+            <a href="/src/pages/recipes.html?health=fodmap-free" class="badge-btn body-medium has-state">FODMAP-Free</a>
 
-            <a href="./recipes.html?health=fish-free" class="badge-btn body-medium has-state">Fish-Free</a>
-
-
-            <a href="./recipes.html?health=egg-free" class="badge-btn body-medium has-state">Egg-Free</a>
+            <a href="/src/pages/recipes.html?health=fish-free" class="badge-btn body-medium has-state">Fish-Free</a>
 
 
-            <a href="./recipes.html?health=DASH" class="badge-btn body-medium has-state">DASH</a>
+            <a href="/src/pages/recipes.html?health=egg-free" class="badge-btn body-medium has-state">Egg-Free</a>
 
-            <a href="./recipes.html?health=dairy-free" class="badge-btn body-medium has-state">Dairy-Free</a>
 
-            <a href="./recipes.html?health=crustacean-free" class="badge-btn body-medium has-state">Crustacean-Free</a>
+            <a href="/src/pages/recipes.html?health=DASH" class="badge-btn body-medium has-state">DASH</a>
 
-            <a href="./recipes.html?health=celery-free" class="badge-btn body-medium has-state">Celery-Free</a>
+            <a href="/src/pages/recipes.html?health=dairy-free" class="badge-btn body-medium has-state">Dairy-Free</a>
 
-            <a href="./recipes.html?health=alcohol-free" class="badge-btn body-medium has-state">Alcohol-Free</a>
+            <a href="/src/pages/recipes.html?health=crustacean-free" class="badge-btn body-medium has-state">Crustacean-Free</a>
 
-            <a href="./recipes.html?health=alcohol-cocktail" class="badge-btn body-medium has-state">Alcohol-Cocktail</a>
+            <a href="/src/pages/recipes.html?health=celery-free" class="badge-btn body-medium has-state">Celery-Free</a>
+
+            <a href="/src/pages/recipes.html?health=alcohol-free" class="badge-btn body-medium has-state">Alcohol-Free</a>
+
+            <a href="/src/pages/recipes.html?health=alcohol-cocktail" class="badge-btn body-medium has-state">Alcohol-Cocktail</a>
 
           </div>
 
